--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -1,12 +1,63 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>Page Title</title>
+    <title>Ucron</title>
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
+    <link href="./index.css" rel="stylesheet">
 </head>
+
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
 
+    <header>
+        <!-- Fixed navbar -->
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+            <a class="navbar-brand" href="./index.html">Ucron</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+                aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link"
+                            href="#">Administradores <span
+                                class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link"
+                            href="./desarrolladores.html">Desarrolladores</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled"
+                            href="#">Departamentos</a>
+                    </li>sa
+                </ul>
+                <form class="form-inline mt-2 mt-md-0">
+                    <input class="form-control mr-sm-2" type="text" placeholder="Buscar" aria-label="Buscar">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+                </form>
+            </div>
+        </nav>
+    </header>
+
+    <!-- Begin page content -->
+    <main role="main" class="container">
+        <br>
+        <h1 class="mt-5">Ucron - Home</h1>
+        <p class="lead">Ucron es un país relativamente nuevo. Tiene unos cuantos años de existir, sin
+            embargo, su desarrollo en distintas áreas está creciendo a pasos agigantados y
+            el caso de las telecomunicaciones no es la excepción.</p>
+
+
+            <img src="./img/ciudad.jpg"  width="50%" height="50%" alt="Ciudad">
+    </main>
+
+
+
+    <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/jquery-3.6.1.min.js"></script>
 </body>
+
 </html>
