--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <title>Ucron</title>
-    <link href="./css/bootstrap.min.css" rel="stylesheet">
-    <link href="./index.css" rel="stylesheet">
+    <link href="/var/www/html/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/var/www/html/index.css" rel="stylesheet">
 </head>
 
 <body>
@@ -56,8 +56,8 @@
 
 
 
-    <script src="./js/bootstrap.min.js"></script>
-    <script src="./js/jquery-3.6.1.min.js"></script>
+    <script src="/var/www/html/js/bootstrap.min.js"></script>
+    <script src="/var/www/html/js/jquery-3.6.1.min.js"></script>
 </body>
 
 </html>
