--- a/Frontend/desarrolladores.html
+++ b/Frontend/desarrolladores.html
@@ -21,17 +21,13 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link"
-                            href="#">Administradores <span
-                                class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="#">Administradores <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link"
-                            href="./desarrolladores.html">Desarrolladores</a>
+                        <a class="nav-link" href="./desarrolladores.html">Desarrolladores</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled"
-                            href="#">Departamentos</a>
+                        <a class="nav-link disabled" href="#">Departamentos</a>
                     </li>sa
                 </ul>
                 <form class="form-inline mt-2 mt-md-0">
@@ -46,16 +42,22 @@
     <main role="main" class="container">
         <br>
         <h1 class="mt-5">Desarrolladores</h1>
-        <p class="lead">Osmel David Tórtola Tistoj <br> Erick Antonio Valenzuela Rivas <br> Fernando Alberto Ambrosio Aleman</p>
+        <p class="lead">Osmel David Tórtola Tistoj <br> Erick Antonio Valenzuela Rivas <br> Fernando Alberto Ambrosio
+            Aleman</p>
 
 
-            <img src="./img/equipo.jpg"  width="50%" height="50%" alt="Equipo">
+        <img src="./img/equipo.jpg" width="50%" height="50%" alt="Equipo">
+
+
+        <button type="button" class="btn btn-link" onclick="obtenerDatos();">Link</button>
+
     </main>
 
 
 
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/jquery-3.6.1.min.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
