--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -58,6 +58,7 @@
 
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/jquery-3.6.1.min.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
